// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader => Snapshots =>  should render properly with props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "lightgrey",
      },
    ]
  }
>
  <ActivityIndicator
    color="darkgrey"
    size="large"
  />
</View>
`;

exports[`Loader => Snapshots =>  should render properly without props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <ActivityIndicator
    color="darkgrey"
    size="large"
  />
</View>
`;
